Fixes a lot of bugs

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "Basic tools to help with redux",
   "main": "index.js",
+  "type": "module",
   "directories": {
     "lib": "lib"
   },
