--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-redux-min-tools",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Basic tools to help with redux",
   "main": "index.js",
   "type": "module",
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "clone-deep": "^4.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
